css/main.css
/* ... */
.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label p + p {
  margin-top: 15px;
}

.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 {
  font-size: 30px;
  margin-bottom: 10px;
}

.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 a {
  color: #303641;
}

.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 span {
  -webkit-opacity: .6;
  -moz-opacity: .6;
  opacity: .6;
  -ms-filter: alpha(opacity=60);
  filter: alpha(opacity=60);
}

/* Bio
=====================================================*/

#bio {
  background-image: url("../images/bio.jpg");
}

#bio-content {
  background-color: #646B8F;
  color: #fff;
}

#bio-content .video-container {
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 30px;
	height: 0;
	overflow: hidden;
    margin-bottom: 20px;
}

#bio-content .video-container iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

#googft-mapCanvas {
  color: #000;
  width: 100%;
  height: 400px;
}

/* Social
=====================================================*/
#social {
  background-image: url("../images/social.jpg");
}

#social-content {
  background-color: #DF9E42;
  color: #fff;
}

#social-content ul {
  text-align: center;
  list-style-type: none;
}

#social-content li {
  display: inline-block;
  margin: 0 10px;
}


li.social-ico a {
  text-indent: -9999px;
  display: inline-block;
  height: 90px;
  width: 90px;
}

li.social-ico {
  border-radius: 100%;
  -webkit-transition: .3s ease-in-out;
  -moz-transition: .3s ease-in-out;
  -o-transition: .3s ease-in-out;
  transition: .3s ease-in-out;
}

li.social-ico:hover {
  -webkit-box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.5);
  -moz-box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.5);
  box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.5);
}

li.social-ico a:hover {
  background-color: transparent;
}

li.linkedin {
  background-image: url("../images/linkedin.png");
  background-size: 90px 90px;
}
li.skype {
  background-image: url("../images/skype.png");
  background-size: 90px 90px;
}
li.twitter {
  background-image: url("../images/twitter.png");
  background-size: 90px 90px;
}
li.facebook {
  background-image: url("../images/facebook.png");
  background-size: 90px 90px;
}
li.pinterest {
  background-image: url("../images/pinterest.png");
  background-size: 90px 90px;
}
li.instagram {
  background-image: url("../images/instagram.png");
  background-size: 90px 90px;
}
li.flickr {
  background-image: url("../images/flickr.png");
  background-size: 90px 90px;
}
li.youtube {
  background-image: url("../images/youtube.png");
  background-size: 90px 90px;
}
/* Contact
=====================================================*/
#contact {
  background-image: url("../images/contact.jpg");
}

#contact-content {
  background-color: #5B9873;
  color: #fff;
}

/*==================================================
  Media Queries
=====================================================*/

/* Extra Small Device
=====================================================*/
@media screen and (min-width: 200px) and (max-width: 767px) {
	.cd-logo img {
		width: 50px;
		height: 50px;
	}
  .cd-logo a h1 {
    display: none;
  }
	.cd-primary-nav-trigger .cd-menu-icon {
  		left: 1em;
	}
	.cover-content {
		margin-top: 45px;
	}
	.cover-content h1 {
		font-size: 50px;
	}
	.cover-content h2 {
		font-size: 20px;
	}
	.cd-header {
  	padding: 30px 0;
  	height: 80px;
  	position: fixed;
	}

  #intro {
    background-image: none;
  }
 .portrait2 {
    display: inline-block;
  }
  
  #cover {
    min-height: 300px;
    background-image: url("../images/mb_hero.jpg");
  }
    
 #skills {
  background-image: url("../images/mb_skills.jpg");
  }

#work {
  background-image: url("../images/mb_work.jpg");
  }

#bio {
  background-image: url("../images/mb_bio.jpg");
  }

#social {
  background-image: url("../images/mb_social.jpg");
  }

#contact {
  background-image: url("../images/mb_contact.jpg");
  }

  .title-section {
  background-repeat: no-repeat;
  background-size: auto;
  }
    
  #skills-content .overview li ul {
    min-height: 0;
  }
  #skills-content .overview li ul li {
    display: inline-block;
  }
  #skills-content .overview li ul li:after {
    content: ";";
  }

  #googft-mapCanvas {
  width: 100%;
  height: 400px;
  }

  #social-content ul {
  margin: 0;
  padding: 0;
  }

  #social-content li {
  display: inline-block;
  margin: 10px;
  }

  .social-ico img {
  height: 60px;
  width: 60px;
  }

  .title-section h1 {
    margin: 80px 0;
    font-size: 40px;
  }

  #mainfooter, .disclaimer {
    text-align: center;
  }

  .disclaimer {
    margin-top: 2em;
  }

}

/* Small device - Tablet
=====================================================*/
@media screen and (min-width: 768px) and (max-width: 992px) {
  .cover-content h1 {
    margin-top: 2em;
  }

.cover-content h2 {
  margin-bottom: 4em;
  }
  #skills-content .overview li ul {
    min-height: 0;
  }
  #skills-content .overview li ul li {
    display: inline-block;
  }
  #skills-content .overview li ul li:after {
    content: ";";
  }


}

/* Medium Device - Desktop
=====================================================*/
@media screen and (min-width: 992px) and (max-width: 1200px) {

}

/*==================================================
  Page Loader
=====================================================*/
.pace {
  -webkit-pointer-events: none;
  pointer-events: none;

  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

.pace .pace-activity {
  display: block;
  position: fixed;
  z-index: 2000;
  top: 0;
  right: 0;
  width: 300px;
  height: 300px;
  background: rgba(45, 64, 78, 0.9);
  -webkit-transition: -webkit-transform 0.3s;
  transition: transform 0.3s;
  -webkit-transform: translateX(100%) translateY(-100%) rotate(45deg);
  transform: translateX(100%) translateY(-100%) rotate(45deg);
  pointer-events: none;
}
/* ... */

